refactor: use Player#getDisplayName for visual stuff